k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: edunova-service
spec:
  type: ClusterIP
  selector:
    app: edunova
  ports:
    - port: 80
      targetPort: 3000
