k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: edunova-ingress
spec:
  rules:
    - host: edunova.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: edunova-service
                port:
                  number: 80
